菜单路由配置权限

--- a/publish/tpl/system/about.html
+++ b/publish/tpl/system/about.html
@@ -20,7 +20,9 @@
         <blockquote class="layui-elem-quote" style="border: none;">
             暂无说明
         </blockquote>
-        <p>© 2018 <a href="/">yanjd</a> 版权所有</p>
+        <p>© 2018 
+                <!-- <a href="/">**</a> 版权所有 -->
+        </p>
     </div>
 </body>
 
